<resources>
    <string name="app_name">tutor.me</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_butt">Sign up</string>
    <string name="log_in_butt">Log in</string>
    <string name="create_mod_butt">Create Module</string>
    <string name="title_activity_create_mod">Create Module</string>
    <string name="title_activity_config_slide">Choose Slide</string>
    <string name="title_activity_make_text_slide">Creating Plaintext Slide</string>
    <string name="title_activity_make_table_slide">Creating Table Slide</string>
    <string name="name_of_your_module_tag">Name of your module:</string>
    <string name="enter_name_here_hint">Enter name here (max 100 char)</string>
    <string name="module_description_tag">Description:</string>
    <string name="describe_your_module_here_hint">Describe your module (max 1000 char)</string>
    <string name="next_butt">Create Slides</string>
    <string name="choose_slide_type_tag">Select the type of slide that best represents the material you\'re going to discuss in the next slide</string>
    <string name="text_slide_top_tag">Enter text to put on the slide</string>
    <string name="text_slide_edit_view_hint">Enter text here (max 2000 char)</string>
    <string name="finish_butt">Finish</string>
    <string name="next_slide_butt">Add new Slide</string>
    <string name="plaintext_image_tag">Plaintext</string>
    <string name="table_image_tag">Table</string>
    <string name="view_lib_butt">Browse Library</string>
    <string name="title_activity_view_library">Browse Module Library</string>
    <string name="total_module_count">Total module count</string>
    <string name="title_activity_view_lib_pop_up_mod_display">View Module</string>
    <string name="cancel_hint">Please press \'Back\' to cancel module.</string>
    <string name="cancel_slide_butt">Cancel Slide</string>
    <string name="enter_word_hint">Enter word</string>
    <string name="table_slide_hint">Words you put in the left column will be registered as target words: write the words here you want your Learner to learn, we\'ll use this information to generate quizzes later.</string>
    <string name="login_email_hint">email</string>
    <string name="login_pass_hint">password</string>
    <string name="title_activity_profile_setup">Setup User Profile</string>
    <string name="username_label">Username</string>
    <string name="age_label">Age:</string>
    <string name="location_label">Location (required)</string>
    <string name="languages1_label">First Language (required)</string>
    <string name="languages2_label">Second Language</string>
    <string name="languages3_label">Third Language</string>
    <string name="interests_check_label">Interests</string>
    <string name="languages_check_label">languages</string>
    <string name="travelling_check_label">travelling</string>
    <string name="sports_check_label">sports</string>
    <string name="history_check_label">history</string>
    <string name="music_check_label">music</string>
    <string name="science_check_label">science</string>
    <string name="arts_check_label">arts</string>
    <string name="food_check_label"><![CDATA[food & cuisine]]></string>
    <string name="health_check_label">health</string>
    <string name="computers_check_label">computers</string>
    <string name="you_may_change_your_username_and_password_later">Configure all of your preferences below. You can change your Username and Password by clicking on Account Settings on the Profile tab.</string>
    <string name="profile_setup_age_hint">Please select your age (optional)</string>
    <string name="profile_setup_location_hint">Please select your location. We\'ll use this information to match you up with other users from similar timezones.</string>
    <string name="profile_setup_mothertongue_hint">Please select your mother-tongue</string>
    <string name="profile_setup_second_language_hint">Please select your second language (optional)</string>
    <string name="profile_setup_third_language_hin">Please select your third language (optional)</string>
    <string name="profile_setup_interests_hint">Please tick one or more of your interests. We\'ll use this to attempt to match you up with other users with similar preferences. (optional)</string>
    <string name="title_activity_home">tutor.me</string>
    <string name="title_activity_profile_tab">ProfileTab</string>
    <string name="title_activity_learning_tab">LearningTab</string>
    <string name="title_activity_training_tab">TrainingTab</string>
    <string name="rating_label">Rating</string>
    <string name="learning_search_butt">Search</string>
    <string name="popup_view_pro_tag">PRO Module</string>
    <string name="popup_view_free_tag">Free Module</string>
    <string name="popup_view_enroll_pro">Enroll ($)</string>
    <string name="popup_enroll_free">Enroll for free</string>
    <string name="noOfSlides_contains">"Contains "</string>
    <string name="noOfSlides_slides">" slides."</string>
    <string name="noOfSlides_contains_one">Contains 1 slide.</string>
    <string name="title_activity_sdasd">sdasd</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout_butt">Log out</string>
    <string name="edit_profile_but">Profile Settings</string>
    <string name="account_settings_butt">Account settings</string>
    <string name="i_m_currently_learning">I\'m currently learning:</string>
    <string name="no_module_taken_yet">You\'re not learning any module yet.</string>
    <string name="training_tab_no_tutees_hint">You\'re not tutoring anyone yet, but once you do, their progress will show up here.</string>
    <string name="modules_created">Modules created</string>
    <string name="title_activity_view_module">ViewModule</string>
    <string name="view_module_your_progress">Your progress:</string>
    <string name="view_module_description_of_module">Description of module</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_module_next_butt">Next</string>
    <string name="view_module_prev_butt">Previous</string>
    <string name="view_module_ask_tutor_butt">Ask tutor</string>
    <string name="view_module_save_amp_quit"><![CDATA[Save & Quit]]></string>
    <string name="title_activity_view_table_slide">ViewTableSlide</string>
    <string name="training_tab_edit_modules">Edit Modules</string>
    <string name="title_activity_edit_modules">Edit Module</string>
    <string name="edit_modules_top_hint">Here are the modules you\'ve authored. Select the one you\'d like to edit.</string>
    <string name="title_activity_edit_this_module">Edit Module</string>
    <string name="edit_module_select_slide_to_edit_hint">Select the slide you wish to edit by LONG PRESSING it, then press one of the buttons above.</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="training_tab_currently_tutoring_hint">"Choose one of your tutees to check up on:"</string>
</resources>
