<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="zsoltpazmandy.tutorme.CreateModActivity"
    tools:showIn="@layout/activity_create_mod">


    <TextView
        android:id="@+id/moduleNameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_your_module_tag" />

    <EditText

        android:id="@+id/moduleNameEdit"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moduleNameTag"
        android:hint="@string/enter_name_here_hint"
        android:minLines="1"
        android:maxLines="2"
        android:maxLength="100" />

    <TextView

        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/moduleDescriptionTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moduleNameEdit"
        android:text="@string/module_description_tag" />

    <EditText

        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/moduleDescriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/moduleDescriptionTag"
        android:hint="@string/describe_your_module_here_hint"
        android:maxLength="1000"
        android:minLines="1"
        android:maxLines="3"
        android:scrollbars="vertical" />

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/moduleBeginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/moduleDescriptionEdit"
        android:layout_below="@id/moduleDescriptionEdit"
        android:text="@string/next_butt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetLib"
        android:text="reset library"
        android:layout_below="@id/moduleDescriptionEdit"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_instructions"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/cancel_hint"
        android:layout_below="@id/moduleBeginButton"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
