<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="zsoltpazmandy.tutorme.MakeTextSlide"
    tools:showIn="@layout/activity_make_text_slide">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSlideTopTag"
        android:text="@string/text_slide_top_tag"/>

    <EditText

        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textSlideString"
        android:hint="@string/text_slide_edit_view_hint"
        android:maxLength="2000"
        android:layout_below="@id/textSlideTopTag"
        android:minLines="1"
        android:maxLines="8"/>

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSlideFinishButt"
        android:text="@string/finish_butt"
        android:layout_below="@id/textSlideString"/>

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textSlideString"
        android:layout_alignRight="@id/textSlideFinishButt"
        android:id="@+id/nextSlide"
        android:text="@string/next_slide_butt"
        android:layout_below="@id/textSlideString"
        android:onClick="chooseSlide"/>

</RelativeLayout>
