<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="zsoltpazmandy.tutorme.ProfileTab"
    tools:showIn="@layout/activity_profile_tab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="8"
            android:weightSum="1">

            <TextView
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/profile_tab_textview_username"
                android:text="@string/username_label"
                android:layout_column="0"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="1" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_column="1"
                android:id="@+id/profile_tab_edittext_username"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="1" />

            <TextView
                android:id="@+id/profile_tab_textview_rating"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rating_label"
                android:layout_column="0"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="2" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_column="1"
                android:id="@+id/profile_tab_edittext_rating"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="2" />

            <TextView
                android:id="@+id/profile_tab_textview_location"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/location_label"
                android:layout_column="0"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="3" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_column="1"
                android:id="@+id/profile_tab_edittext_location"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="3" />

            <TextView
                android:id="@+id/profile_tab_textview_language1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/languages1_label"
                android:layout_column="0"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="4" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_column="1"
                android:id="@+id/profile_tab_edittext_language1"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="4" />

            <TextView
                android:id="@+id/profile_tab_textview_language2"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/languages2_label"
                android:layout_column="0"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="5" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_column="1"
                android:id="@+id/profile_tab_edittext_language2"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="5" />

            <TextView
                android:id="@+id/profile_tab_textview_language3"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/languages3_label"
                android:layout_column="0"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="6" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_column="1"
                android:id="@+id/profile_tab_edittext_language3"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="6" />

            <TextView
                android:id="@+id/profile_tab_textview_interest"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/interests_check_label"
                android:layout_column="0"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_columnWeight="0.5"
                android:textSize="@dimen/profile_setup_text_size"
                android:layout_row="7" />

        </GridLayout>

    </LinearLayout>

</ScrollView>
